--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pharmacy-inventory-system",
+  "name": "pharmacy-erp-system",
   "version": "1.0.0",
-  "description": "Multi-branch pharmacy inventory and POS system",
+  "description": "full erp system customised for pharmacies but really could be made for any type of store out there",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -12,33 +12,27 @@
     "inventory",
     "pos",
     "express",
-    "ejs"
+    "ejs",
+    "erp",
+    "node",
+    "ecommerce"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Backpack Tech Works",
+  "license": "UNLICENSED",
   "dependencies": {
-    "@fontsource/inter": "^5.2.8",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.1",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
     "multer": "^2.0.0",
     "mysql2": "^3.6.5",
-    "next": "15.5.4",
-    "path": "0.12.7",
     "sharp": "^0.33.0"
   },
   "devDependencies": {
-    "@types/node": "24.7.2",
-    "nodemon": "^3.0.2",
-    "postcss": "8.5.6"
+    "nodemon": "^3.0.2"
   }
 }
